--- a/molybot/pubspec.yaml
+++ b/molybot/pubspec.yaml
@@ -24,13 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.3
-  # web_socket_channel: ^2.0.0
-  # charts_flutter: ^0.10.0
+  web_socket_channel: ^2.0.0
+  charts_flutter: ^0.10.0
   syncfusion_flutter_charts: ^18.4.47
   firebase_auth: ^1.0.1
   cloud_firestore: ^1.0.1
   firebase_core: ^1.0.1
-  firebase_database: ^6.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
