--- a/molybot/pubspec.yaml
+++ b/molybot/pubspec.yaml
@@ -53,7 +53,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/monopolyUncle.jpg
+    - assets/images/molybotBlack.png
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
