--- a/molybot/pubspec.yaml
+++ b/molybot/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.3
+  fl_chart: ^0.12.0
   
   firebase_auth: ^1.0.1
   cloud_firestore: ^1.0.1
