--- a/molybot/pubspec.yaml
+++ b/molybot/pubspec.yaml
@@ -24,12 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.3
-  fl_chart: ^0.20.1
+  fl_chart: ^0.12.0
   
-  firebase_auth: ^1.0.1
-  cloud_firestore: ^1.0.1
-  firebase_core: ^1.0.1
-  firebase_database: ^6.1.0
+  firebase_auth: ^1.1.2
+  cloud_firestore: ^1.0.7
+  firebase_core: ^1.1.0
+  firebase_database: ^6.1.2
+  firebase_messaging: ^9.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
